--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -77,7 +77,8 @@
         "Mémoire Libre (Pourcentage)": "Freier Speicher (in Prozent)",
         "Swap": "Swap",
         "Swap Libre (Pourcentage)": "Freier Swap (in Prozent)",
-        "Réseau (RX-TX)": "Netzwerk (RX-TX)",
+        "Carte Réseau": "Netzwerkkarte",
+        "Réseau (TX-RX)": "Netzwerk (TX-RX)",
         "Espace Disque Total": "Speicherplatz Gesamt",
         "Espace Disque Utilisé": "Speicherplatz Verwendet",
         "Espace Disque Utilisé (Pourcentage)": "Speicherplatz Verwendet (in Prozent)",
