--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -76,11 +76,12 @@
         "Mémoire": "Memory",
         "Mémoire Libre (Pourcentage)": "Free Memory (Percentage)",
         "Swap": "Swap",
-        "Swap Libre (Pourcentage)": "Free swap (percentage)",
-        "Réseau (RX-TX)": "Network (RX-TX)",
-        "Espace disque Total": "Total disk space",
-        "Espace disque Utilisé": "Disk space used",
-        "Espace Disque Utilisé (Pourcentage)": "Disk space used (percentage)",
+        "Swap Libre (Pourcentage)": "Free Swap (Percentage)",
+        "Carte Réseau": "Network Card",
+        "Réseau (TX-RX)": "Network (TX-RX)",
+        "Espace Disque Total": "Total Disk Space",
+        "Espace Disque Utilisé": "Disk Space Used",
+        "Espace Disque Utilisé (Pourcentage)": "Disk Space Used (Percentage)",
         "CPU(s)": "CPU(s)",
         "Température CPU": "Temperature CPU",
         "Statut Cnx SSH": "Status Cnx SSH",
