--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -77,6 +77,7 @@
         "Mémoire Libre (Pourcentage)": "Memoria Libre (Porcentaje)",
         "Swap": "Swap",
         "Swap Libre (Pourcentage)": "Swap Libre (Porcentaje)",
+        "Carte Réseau": "Tarjeta de Red",
         "Réseau (TX-RX)": "Red (TX-RX)",
         "Espace Disque Total": "Espacio Total Disco",
         "Espace Disque Utilisé": "Espacio Utilizado Disco",
@@ -86,12 +87,12 @@
         "Statut Cnx SSH": "Estado Conexión SSH",
         "perso1": "personal1",
         "perso2": "personal2",
-        "Syno Volume 2 Total": "Syno Volume 2 Total",
-        "Syno Volume 2 Utilisé": "Syno Volume 2 Utilizado",
-        "Syno Volume 2 Utilisé (Pourcentage)": "Syno Volume 2 Utilizado (Porcentaje)",
-        "Syno Volume USB Total": "Syno Volume USB Total",
-        "Syno Volume USB Utilisé": "Syno Volume USB Utilizado",
-        "Syno Volume USB Utilisé (Pourcentage)": "Syno Volume USB Utilizado (Porcentaje)",
+        "Syno Volume 2 Total": "Syno Volumen 2 Total",
+        "Syno Volume 2 Utilisé": "Syno Volumen 2 Utilizado",
+        "Syno Volume 2 Utilisé (Pourcentage)": "Syno Volumen 2 Utilizado (Porcentaje)",
+        "Syno Volume USB Total": "Syno Volumen USB Total",
+        "Syno Volume USB Utilisé": "Syno Volumen USB Utilizado",
+        "Syno Volume USB Utilisé (Pourcentage)": "Syno Volumen USB Utilizado (Porcentaje)",
         "Reboot": "Reiniciar",
         "PowerOff": "Apagar"
     },
