--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -77,7 +77,8 @@
         "Mémoire Libre (Pourcentage)": "Mémoire Libre (Pourcentage)",
         "Swap": "Swap",
         "Swap Libre (Pourcentage)": "Swap Libre (Pourcentage)",
-        "Réseau (RX-TX)": "Réseau (RX-TX)",
+        "Carte Réseau": "Carte Réseau",
+        "Réseau (TX-RX)": "Réseau (TX-RX)",
         "Espace Disque Total": "Espace Disque Total",
         "Espace Disque Utilisé": "Espace Disque Utilisé",
         "Espace Disque Utilisé (Pourcentage)": "Espace Disque Utilisé (Pourcentage)",
