--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -83,14 +83,14 @@
         "Espace Disque Utilisé": "Disk Space Used",
         "Espace Disque Utilisé (Pourcentage)": "Disk Space Used (Percentage)",
         "CPU(s)": "CPU(s)",
-        "Température CPU": "Temperature CPU",
-        "Statut Cnx SSH": "Status Cnx SSH",
+        "Température CPU": "CPU Temperature",
+        "Statut Cnx SSH": "SSH Status Cnx",
         "perso1": "custom1",
         "perso2": "custom2",
-        "Syno Volume 2 Total": "Syno Volume 2 Total",
+        "Syno Volume 2 Total": "Total Syno Volume 2",
         "Syno Volume 2 Utilisé": "Syno Volume 2 Used",
         "Syno Volume 2 Utilisé (Pourcentage)": "Syno Volume 2 Used (Percentage)",
-        "Syno Volume USB Total": "Syno Volume USB Total",
+        "Syno Volume USB Total": "Total Syno Volume USB",
         "Syno Volume USB Utilisé": "Syno Volume USB Used",
         "Syno Volume USB Utilisé (Pourcentage)": "Syno Volume USB Used (Percentage)",
         "Reboot": "Reboot",
