--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -83,7 +83,7 @@
         "Espace Disque Utilisé": "Espacio Utilizado Disco",
         "Espace Disque Utilisé (Pourcentage)": "Espacio Utilizado Disco (Porcentaje)",
         "CPU(s)": "CPU(s)",
-        "Température CPU": "Temperatura CPU",
+        "Température CPU": "Temperatura de la CPU",
         "Statut Cnx SSH": "Estado Conexión SSH",
         "perso1": "personal1",
         "perso2": "personal2",
