--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -42,6 +42,7 @@
         "Options": "Optionen",
         "Actions": "Aktionen",
         "Etat": "Zustand",
+        "Dupliquer": "Duplikat",
         "Supprimer": "Löschen",
         "Sauvegarder": "Speichern",
         "Ajouter un Monitoring": "Monitoring hinzufügen",
