--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -42,6 +42,7 @@
         "Options": "Options",
         "Actions": "Actions",
         "Etat": "State",
+        "Dupliquer": "Duplicate",
         "Supprimer": "Delete",
         "Sauvegarder": "Save",
         "Ajouter un Monitoring": "Add a Monitoring",
