--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -42,6 +42,7 @@
         "Options": "Opciones",
         "Actions": "Acciones",
         "Etat": "Estado",
+        "Dupliquer": "Duplicar",
         "Supprimer": "Borrar",
         "Sauvegarder": "Guardar",
         "Ajouter un Monitoring": "Agregar un Monitoring",
