--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -42,6 +42,7 @@
         "Options": "Options",
         "Actions": "Actions",
         "Etat": "Etat",
+        "Dupliquer": "Dupliquer",
         "Supprimer": "Supprimer",
         "Sauvegarder": "Sauvegarder",
         "Ajouter un Monitoring": "Ajouter un Monitoring",
