--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -50,6 +50,7 @@
         "Local ou Distant ?": "Lokale oder Remote ?",
         "Volume 2": "Volumen 2",
         "HDD USB": "HDD USB",
+        "HDD eSATA": "HDD eSATA",
         "Ajouter Monitoring": "Monitoring hinzufügen",
         "Gestion": "Management",
         "Ajouter": "Hinzufügen",
@@ -68,7 +69,8 @@
         "A cocher pour monitorer un NAS Synology": "Aktivieren Sie, um ein Synology NAS zu überwachen",
         "A cocher si le nom du modèle de votre Syno est mal détecté": "Aktivieren Sie, wenn der Modellname Ihres Syno falsch erkannt wird",
         "A cocher si vous avez un 2ème volume disque": "Aktivieren Sie, wenn Sie ein zweites Festplattenvolume haben",
-        "A cocher si vous avez un disque USB": "Aktivieren Sie, wenn Sie eine USB-Festplatte haben ",
+        "A cocher si vous avez un disque USB": "Aktivieren Sie, wenn Sie eine USB-Festplatte haben",
+        "A cocher si vous avez un disque eSATA": "Aktivieren Sie, wenn Sie eine eSATA-Festplatte haben",
         "A cocher pour spécifier la commande de récupération de température": "Aktivieren Sie, um den Temperaturwiederherstellungsbefehl anzugeben"
     },
     "plugins\/Monitoring\/core\/class\/Monitoring.class.php": {
@@ -97,6 +99,9 @@
         "Syno Volume USB Total": "Syno Volumen USB Gesamt",
         "Syno Volume USB Utilisé": "Syno Volumen USB Verwendet",
         "Syno Volume USB Utilisé (Pourcentage)": "Syno Volumen USB Verwendet (in Prozent)",
+        "Syno Volume eSATA Total": "Syno Volumen eSATA Gesamt",
+        "Syno Volume eSATA Utilisé": "Syno Volumen eSATA Verwendet",
+        "Syno Volume eSATA Utilisé (Pourcentage)": "Syno Volumen eSATA Verwendet (in Prozent)",
         "Reboot": "Reboot",
         "PowerOff": "Ausschalten"
     },
