--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -25,6 +25,8 @@
         "Saisir l'adresse IP": "Geben Sie die IP-Adresse ein",
         "Port SSH": "SSH Port",
         "Saisir le port SSH": "Geben Sie den SSH Port ein",
+        "Timeout SSH": "SSH Timeout",
+        "Saisir le timeout SSH": "Geben Sie den SSH Timeout ein",
         "Clé SSH": "SSH Schlüssel",
         "Saisir la clé SSH": "Geben Sie den SSH Schlüssel ein",
         "Passphrase": "Passphrase",
