--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -25,6 +25,8 @@
         "Saisir l'adresse IP": "Introduzca la dirección IP",
         "Port SSH": "Puerto SSH",
         "Saisir le port SSH": "Introduzca puerto SSH",
+        "Timeout SSH": "Tiempo de espera SSH",
+        "Saisir le timeout SSH": "Introduzca el tiempo de espera SSH",
         "Identifiant": "Usuario",
         "Saisir le login": "introduzca usuario",
         "Mot de passe": "Contraseña",
