--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -92,7 +92,8 @@
         "Espace Disque Utilisé (Pourcentage)": "Speicherplatz Verwendet (in Prozent)",
         "CPU(s)": "CPU(s)",
         "Température CPU": "CPU Temperatur",
-        "Statut Cnx SSH": "Status Cnx SSH",
+        "SSH Status": "SSH Status",
+        "Cron Status": "Cron Status",
         "perso1": "personal1",
         "perso2": "personal2",
         "Syno Volume 2 Total": "Syno Volumen 2 Gesamt",
