--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -92,7 +92,8 @@
         "Espace Disque Utilisé (Pourcentage)": "Disk Space Used (Percentage)",
         "CPU(s)": "CPU(s)",
         "Température CPU": "CPU Temperature",
-        "Statut Cnx SSH": "SSH Status Cnx",
+        "SSH Status": "SSH Status",
+        "Cron Status": "Cron Status",
         "perso1": "custom1",
         "perso2": "custom2",
         "Syno Volume 2 Total": "Total Syno Volume 2",
