--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -92,7 +92,8 @@
         "Espace Disque Utilisé (Pourcentage)": "Espacio Utilizado Disco (Porcentaje)",
         "CPU(s)": "CPU(s)",
         "Température CPU": "Temperatura de la CPU",
-        "Statut Cnx SSH": "Estado Conexión SSH",
+        "SSH Status": "Estado SSH",
+        "Cron Status": "Estado Cron",
         "perso1": "personal1",
         "perso2": "personal2",
         "Syno Volume 2 Total": "Syno Volumen 2 Total",
