--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -92,7 +92,8 @@
         "Espace Disque Utilisé (Pourcentage)": "Espace Disque Utilisé (Pourcentage)",
         "CPU(s)": "CPU(s)",
         "Température CPU": "Température CPU",
-        "Statut Cnx SSH": "Statut Cnx SSH",
+        "SSH Status": "Statut SSH",
+        "Cron Status": "Statut Cron",
         "perso1": "perso1",
         "perso2": "perso2",
         "Syno Volume 2 Total": "Syno Volume 2 Total",
